# meeting-mind

./: .env.example  .gitignore  BLUEPRINT.md  Dockerfile  PRD.md  README.md  WORKLOG.md  docker-compose.yml  pyproject.toml
services/hermes/agents/: __init__.py  recap.py  reminder.py  summarizer.py  task_splitter.py
services/hermes/core/: __init__.py  db.py  settings.py
services/hermes/gateway/: main.py  schemas.py
services/hermes/gateway/routes/: health.py  meetings.py  pics.py  projects.py  tasks.py  upload.py  workflow.py
services/hermes/migrations/: 0001_init.sql  0002_indexes.sql  0003_pics_projects_meetings.sql  README.md  runner.py
services/hermes/repositories/: __init__.py  events.py  meetings.py  pics.py  projects.py  tasks.py
services/hermes/tools/: __init__.py  notion.py  qdrant.py  storage.py  stt.py
services/hermes/worker/: executor.py  main.py  queue.py
